# AiCodeDocumenter

./: .gitignore  CLAUDE.md  GuiaParaDocTecnica.md  analiza-todo-el-contenido-lucky-metcalfe.md  explore-multi-agent-adaptation.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
M0.2-investigacion-plugin-uml/: 00-status.md  01-plan-original.md  02-resultado-investigacion.md  03-decision.md  README.md
Output/xpp/Axxon365LicenseManagement/Axxon 365 License Management/AxClass/: AxnLicSubscriptionChecker.xpp  AxnLicSubscriptionService.xpp  (+1 more)
Prompts/: 01_classify_classes.md  01_exclusion_list.md
discontinued/: GEMINI.md  modular-forging-patterson.md
discontinued/Prompts/: 00_identify_functional_groups.md  02_generate_class_diagrams.md  03_generate_component_diagram.md  04_generate_container_diagram.md  05_generate_sequence_diagrams.md
openspec/: config.yaml
openspec/changes/m3-component-diagrams/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/m4-sequence-diagrams/: design.md  proposal.md  tasks.md
openspec/changes/m5-incremental-modes/: design.md  proposal.md  tasks.md
plugins/document-xpp/: README.md
plugins/document-xpp/.claude-plugin/: plugin.json
plugins/document-xpp/.validation/: dependencies.csv  inventory.csv
plugins/document-xpp/.validation/m1-workspace-sample/: README.md  functional_map.md
plugins/document-xpp/agents/: c4-component-writer.md  diagram-writer.md  functional-classifier.md  sequence-diagram-writer.md  uml-diagram-writer.md
plugins/document-xpp/skills/document-xpp/: SKILL.md
(+90 files in other folders)
